--- a/sample/.vscode/clove_unit_settings.json
+++ b/sample/.vscode/clove_unit_settings.json
@@ -1,5 +1,5 @@
 {
     "testProjectWsRelPath" : "",
     "buildCommand" : "clang -I. -o test.exe *.c",
-    "testExecPath" : ".\\test.exe"
+    "testExecPath" : "test.exe"
 }
