--- a/package.json
+++ b/package.json
@@ -1,21 +1,35 @@
 {
-	"name": "test-provider-sample",
-	"displayName": "test-provider-sample",
-	"description": "Sample showing how to use the test APIs",
+	"name": "vscode-clove-unit",
+	"displayName": "CLove-Unit",
+	"description": "Testing Extension for CLove-Unit testing library for C/C++",
 	"version": "0.0.1",
-	"publisher": "vscode-samples",
-	"private": true,
-	"license": "MIT",
-	"repository": "https://github.com/Microsoft/vscode-extension-samples",
-	"enabledApiProposals": [
-		"testCoverage",
-		"testRefresh"
-	],
-	"engines": {
-		"vscode": "^1.51.0"
+	"publisher": "fdefelici",
+	"author": {
+		"name": "Federico De Felici"
 	},
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/fdefelici/vscode-clove-unit"
+	},
+	"icon": "sample/images/icon.png",
+
+	"engines": {
+		"vscode": "^1.63.0"
+	},
+	"keywords": [
+		"C",
+		"C++",
+		"Testing",
+		"Unit Test",
+		"Unit Testing",
+		"Clove",
+		"Clove Unit",
+		"clove_unit",
+		"clove-unit"
+	],
 	"categories": [
-		"Other"
+		"Testing"		
 	],
 	"activationEvents": [
 		"onLanguage:c",
